# komanawa-easy-nc-accessor

./: .gitignore  LICENSE  README.rst  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_images/: inheritance-1ceb38973ec22284115fb2885d832afccb3e86cb.png.map  inheritance-45eabd26087946ab9de60c3faa9b7533a35e7107.png.map  inheritance-8237311521efea92cf7c0371b56fd5d87fddded4.png.map  inheritance-8951e4703a7a6b0243bf5cdbd4c290326844f346.png.map  inheritance-91ed11bf296ba12013c85365830efce71ea0b127.png.map  inheritance-9c9b62d35ed55d40390fa34b4193743da7afb75b.png.map
docs/_sources/: index.rst.txt
docs/_sources/autoapi/komanawa/easy_nc_accessor/: index.rst.txt
docs/_sources/autoapi/komanawa/easy_nc_accessor/base_accessor/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/komanawa/easy_nc_accessor/: index.html
docs/autoapi/komanawa/easy_nc_accessor/base_accessor/: index.html
docs_build/: conf.py  index.rst
examples/: annual_mean_at_point_polygon.py  data_in_polygon.py  export_annual_mean_and_sum_at_point_and_polygon.py  export_data_at_point.py  get_relevant_tiles.py  mean_uncert_at_point.py  plot_and_export_spatial_rainfall_averaged_over_time.py  plot_and_export_timeseries_rainfall_averaged_over_polygon.py  plot_export_spatial_mean.py  plot_timeseries_at_point_with_uncertainty.py
examples/dummy_dataset/: 559_2000-07-01_2003-06-30.nc  560_2000-07-01_2003-06-30.nc  582_2000-07-01_2003-06-30.nc  583_2000-07-01_2003-06-30.nc  grid_bounds.dbf  grid_bounds.qmd  grid_bounds.shp  grid_bounds.shx  readme.rst
examples/example_data/: example_polygon.qix  example_polygon.shp  nz-topo250-maps.jpg.aux.xml  nz-topo250-maps.txt  nz-topo250-maps.xml
examples/example_inputs/: __init__.py  example_polygon.shx  middlemarch.qix  middlemarch.shp  middlemarch.shx  nz-topo250-maps.jgw
src/komanawa/easy_nc_accessor/: __init__.py  base_accessor.py  version.py
tests/: test_easy_nc_accessor.py
