[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project]
name = "komanawa-easy-nc-accessor"
dynamic = ["version"] # version set in version.py
authors = [
    { name = "Matt Dumont", email = "Matt@komanawa.com" },
]
description = "A package to provide easier spatial access to Komanawa Netcdf files"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    'numpy<2.0',
    'pandas',
    'netcdf4',
    'geopandas',
    'pyproj',
    'matplotlib',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL-3.0 License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "komanawa.easy_nc_accessor.version.__version__"}

[project.urls]
Homepage = "https://github.com/Komanawa/komanawa-easy-nc-accessor"
Issues = "https://github.com/Komanawa/komanawa-easy-nc-accessor/issues"
Documentation = "https://komanawa.github.io/komanawa-easy-nc-accessor"